fix: overlapping class names in different pages

--- a/client/src/components/singlefeedhome/singleFeedHome.css
+++ b/client/src/components/singlefeedhome/singleFeedHome.css
@@ -1,37 +1,37 @@
 .singlefeedhome {
     /* background-color: #e2e2e2; */
     display: flex;
+    justify-content: start;
     padding: 10px;
     border-bottom: 1px solid #e4e4e4;
     padding: 25px 40px 25px 10px;
 }
 
-.leftcontent {
+.sfh-leftcontent {
     margin-right: 20px;
     padding-top: 2px;
 }
 
-.leftcontent .profilepic {
+.sfh-leftcontent .profilepic {
     width: 35px;
     height: 35px;
     border-radius: 50%;
 }
 
-.contentmain div {
+.sfh-contentmain div {
     color: #343434;
 }
 
-.contentmain .username, .posttitle {
+.sfh-contentmain .username, .posttitle {
     font-size: 1rem;
 }
 
-.contentmain p {
+.sfh-contentmain p {
     margin: 10px 0 10px 0;
     font-size: 0.95rem;
     color: #343434;
 }
     
-
 .contentother {
     display: flex;
     align-items:center;
@@ -48,46 +48,46 @@
     align-items: center;
 }
 
-.rightother .votes, .views {
+.rightother .f-votes, .f-views {
     display: flex;
     align-items: center;
     margin-left: 12px;
     font-size: 0.85rem;
 }
 
-.rightother .votes {
+.rightother .f-votes {
     background-color: #f6f6f6;
     border-radius: 4px;
 }
 
-.upvotes {
+.f-upvotes {
     display: flex;
     align-items: center;
     margin-right: 1px solid red;
 }
 
-.rightother .votes i {
+.rightother .f-votes i {
     font-size: 1.7rem;
 }
 
-.rightother .votes span {
+.rightother .f-votes span {
     margin: 0 5px 0 3px;;
 }
 
-.rightother .upvotes i, .numupvotes {
+.rightother .f-upvotes i, .f-numupvotes {
     color: rgb(11, 11, 237);
 }
 
-.rightother .upvotes, .downvotes {
+.rightother .f-upvotes, .f-downvotes {
     padding: 0 4px 0 4px;
     border-radius: 4px;
 }
 
-.rightother .upvotes:hover, .downvotes:hover {
+.rightother .f-upvotes:hover, .f-downvotes:hover {
     background-color: #e9e9e9;
 }
 
-.rightother .views i {
+.rightother .f-views i {
     font-size: 1.1rem;
     margin: 0 8px 0 4px;
 }
